[package]
name = "alela"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
hashbrown = { version = "0.14.5", features = ["serde"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
